--- a/Prj_BookTherapy/src/main/resources/static/css/style.css
+++ b/Prj_BookTherapy/src/main/resources/static/css/style.css
@@ -38,19 +38,19 @@ header {
 }
 
 /*bottone accedi/registrati*/
-.auth-buttons button {
-    margin-left: 10px;
-    padding: 12px 20px;
-    font-size: 1em;
-    background-color: #1a3e2e;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+.auth-buttons a {
+  padding: 10px 18px;
+  background-color: #a8d5ba;
+  color: #1a3e2e;
+  font-weight: 600;
+  border-radius: 8px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
 }
 
-.auth-buttons button:hover {
-    background-color: #145c3d;
+.auth-buttons a:hover {
+  background-color: #88c4a7;
+
 }
 
 /*footer*/
